k8s/default-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend-deployment
spec:
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: default-backend
        # image: dnw2022/default-backend:latest
        image: registry.digitalocean.com/dnw2022/default-backend:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
