k8s/ingress-default-freelancedirekt.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-default-freelancedirekt-nl-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # Rewrite url to always go to /
    # This metadata will only apply to the rules mentioned in this file
    # Othe Ingress services can have their own annotations
    nginx.ingress.kubernetes.io/rewrite-target: /
    # By not setting the cluster-issuer the shim will not automatically create certs
    # Cert-manager will still issue certificates for Certificate objects we create
    # We will just create a wildcard Certificate object that can be used for all the hosts  
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - '*.freelancedirekt.nl'
    - freelancedirekt.nl
    secretName: freelancedirekt-nl-wildcard-tls
  rules:
    - host: '*.freelancedirekt.nl'
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: default-backend-service
                port:
                  number: 5000
