k8s/ingress-default.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-default-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # By not setting the cluster-issuer the shim will not automatically create certs
    # Cert-manager will still issue certificates for Certificate objects we create
    # We will just create a wildcard Certificate object that can be used for all the hosts  
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - '*.freelance-direkt.nl'
    - freelance-direkt.nl
    secretName: freelance-direkt-nl-wildcard-tls
  rules:
    - host: '*.freelance-direkt.nl'
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: default-backend-service
                port:
                  number: 5000
